@@ -9,7 +9,6 @@ import java.math.RoundingMode;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.cache.annotation.Cacheable;
 import org.springframework.data.domain.Sort;
@@ -55,7 +54,7 @@ public class StockSummaryService {
           }
           return new StockSummaryDTO(stockName, oldest, newest, min, max, normalize);
         })
-        .collect(Collectors.toList());
+        .toList();
   }
 
 }
